--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,6 +8,7 @@ jobs:
   gh-release:
     if: github.event.pull_request.merged == true && contains(github.event.pull_request.labels.*.name, 'release')
     name: Create Release
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
@@ -15,6 +16,9 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: "18.0.0"
+
+      - name: Checkout main
+        run: git checkout main
 
       - name: Installing Dependencies
         run: yarn
