--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,12 +1,15 @@
 name: CI
 
 on:
-  push:
-    branches: ["main", "develop"]
+  pull_request:
+    types: [closed]
 
 jobs:
   gh-release:
     name: Create Release
+    if: github.event.pull_request.merged == true &&
+      github.event.pull_request.base.ref == 'main' &&
+      contains(github.event.pull_request.labels.*.name, 'release')
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repo
@@ -30,7 +33,6 @@ jobs:
           echo "Labels: ${{ toJson(github.event.pull_request.labels) }}"
 
       - name: Creating Release on Github
-        if: github.ref == 'refs/heads/main' && github.event.pull_request.merged == true && contains(github.event.pull_request.labels.*.name, 'release')
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
