--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,19 +26,12 @@ jobs:
           path: "package.json"
           prop_path: "version"
 
-      - name: Debug info
-        run: |
-          echo "GitHub Ref: $GITHUB_REF"
-          echo "Pull Request Merged: ${{ github.event.pull_request.merged }}"
-          echo "Labels: ${{ toJson(github.event.pull_request.labels) }}"
-
       - name: Creating Release on Github
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          PACKAGE_VERSION: v${{ steps.package-version.outputs.prop }}
         with:
-          tag_name: $PACKAGE_VERSION
-          release_name: Release $PACKAGE_VERSION
+          tag_name: v${{ steps.package-version.outputs.prop }}
+          release_name: v${{ steps.package-version.outputs.prop }}
           draft: false
           prerelease: false
