--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,11 +27,7 @@ jobs:
           prop_path: "version"
 
       - name: Creating Release on Github
-        uses: actions/create-release@v1
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: v${{ steps.package-version.outputs.prop }}
-          release_name: v${{ steps.package-version.outputs.prop }}
-          draft: false
-          prerelease: false
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          PACKAGE_VERSION: v${{ steps.package-version.outputs.prop }}
+        run: gh release create $PACKAGE_VERSION --title $PACKAGE_VERSION --generate-notes
