--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,7 @@ jobs:
     name: Create Release
     if: github.event.pull_request.merged == true &&
       github.event.pull_request.base.ref == 'main' &&
-      contains(github.event.pull_request.labels.*.name, 'release')
+      startsWith(github.event.pull_request.head.ref, 'rc-')
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repo
